hphp/hack/test/typecheck/fc_enum_11.php.exp
File "fc_enum_11.php", line 4, characters 19-33:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
