hphp/hack/test/typecheck/fc_enum_11.php
<?hh // strict

// No using HH\BuiltinEnum
class Foo extends \HH\BuiltinEnum<int> {}
